tests/type_constructor_const_name_not_type_bad.stderr
tests/type_constructor_const_name_not_type_bad.sl:4:7: error: SL2003: unknown type
